# SDL_GUI

./: .gitignore  CMakeLists.txt
headers/gui/: Window.hpp  WindowHandler.hpp
headers/gui/elements/: Element.hpp
headers/gui/utils/: Font.hpp  FontManager.hpp
source/: main.cpp
source/gui/: Window.cpp  WindowHandler.cpp
source/gui/elements/: Element.cpp
source/gui/utils/: Font.cpp  FontManager.cpp
